--- a/css/design/style.css
+++ b/css/design/style.css
@@ -1,64 +1,85 @@
-img {
-	height: 400px; width: 740px;
-}
-header{
-	background-color: white;
-	text-align: center;
-	height: 100px;
-}
+@media screen and (max-width: 900px) { 
+	
+	img {
+	height: 60vw; width: 90vh;
+	align-items: center;
+	margin: 20px
 
-h2{
+	}
+
+	p { 
+	text-align: center;
+	font-size: 2vw;
+	color: white;
+	height: 20vw;
+	width: 80vh;
+	word-break: keep-all;
+	line-height: 2.4;
+	margin: 10vw;
+	letter-spacing: 0.2px;
+	}	
+
+	article {
+	background-color: black;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	}
+
+	h1{
+		letter-spacing: 10px;
+	}
+
+	h2{
 	color: black;
 	background-color: white;
-	width: 220px;
+	width: 900px;
 	box-shadow: 10px 10px 1px 3px rgb(150, 0, 0);
-}
-
-nav{
-	background-color: white;;
-	border: 4px solid black;
-	background: linear-gradient(180deg,white,black)
-}
-
-a{
-	text-decoration: none;
-	color: rgb(150,0,0)
-}
-
-ul{
-	margin: 40px;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap
-}
-
-li {
-	width: 300px;
-	height: 50px;
 	text-align: center;
-	color: rgb(150, 0, 0);
-	list-style: none;
+	letter-spacing: 5px;
+	}
+
+
+	header{
+		background-color: white;
+		text-align: center;
+		height: 100px;
+	}
+
+	nav{
+		background-color: white;
+		border: 4px solid black;
+		background: linear-gradient(180deg,white,black)
+	}
+
+	a{
+		text-decoration: none;
+		color: rgb(150,0,0)
+	}
+
+	ul{
+		padding: 10px;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap
+	}
+
+	li {
+		height: 50px;
+		text-align: center;
+		color: rgb(150, 0, 0);
+		list-style: none;
+	}	
+
+	section {
+
+		padding: 10px;
+    	justify-content:space-evenly;
+		border: 2px solid black;
+		background-color: black;
+		width: 900px;
+	}
+	
 }
 
-article {
-
-	background-color: black;
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: flex-start;
-}
-section {
-
-    justify-content:space-evenly;
-	border: 2px solid black;
-	background-color: black;
-}
-p {
-	color: white;
-	height: 200px;
-	width: 720px;
-	word-break: keep-all;
-	line-height: 1.5;
-	margin: 30px
-}
