--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,17 @@
 	margin: 0;
 }
 
-@media screen and (max-width: 900px) 
+@media screen and (max-width: 600px) 
 {
 
 	header {
-	background-color: white;
-	text-align: left;
-	width: 100vw;
-	height: 15vh;
-	position: absolute;
-	top: 0px;
-	left: 0px;
+		background-color: white;
+		text-align: left;
+		width: 103vw;
+		height: 15vh;
+		position: absolute;
+		top: 0px;
+		left: 0px;
 	}
 
 	h1 {
@@ -23,11 +23,13 @@
 		color: rgb(150,0,0);
 		font-size: 4vw;
 		letter-spacing: 10px;
-		font-size: 2vw;
+		font-size: 3vw;
 	}
 
+
 	nav {
-		width: 900px;
+		background-color: black;
+		width: 600px;
 	}
 
 	ul {
@@ -35,13 +37,14 @@
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
+		height: 1500px;
 	}
 
 	.work4 {
 		color: white;
 		position: absolute;
 		top: 350px;
-		left: 550px;
+		left: 450px;
 		font-size: 1.7vw;
 		line-height: 2;
 	}
@@ -50,7 +53,7 @@
 		color: white;
 		position: absolute;
 		top: 950px;
-		left: 550px;
+		left: 450px;
 		font-size: 1.7vw;
 		line-height: 2;
 		text-align: left;
@@ -75,38 +78,13 @@
 	}
 
 	.p3 {
-	position: absolute;
-	top: 80px;
-	left: 30px;
-	font-size: 2vw;
-	letter-spacing: 2px
-}
+		position: absolute;
+		top: 80px;
+		left: 30px;
+		font-size: 2vw;
+		letter-spacing: 2px
+	}
 
-h1 {
-	position: absolute;
-	top: 15px;
-	left: 30px;
-	color: rgb(150,0,0);
-	font-size: 4vw;
-	letter-spacing: 10px;
-}
-nav {
-	background-color: black;
-	width: 1800px;
-}
-
-ul {
-	border: 5px solid black;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	height: 1500px;
-}
-
-
-
-@media screen and (max-width: 900px)
-{
 	.r1 {
 		position: absolute;
 		top: 350px;
@@ -117,21 +95,18 @@ ul {
 		background: radial-gradient(black,white);
 		box-shadow: 80px 0px 0px 10px; color: rgb(150,0,0);
 		list-style: none;
-		}
-}
+	}
 
-
-@media screen and (max-width: 900px)
-{
 	.g1 {
 		position: absolute;
-		top:950px;
+		top: 950px;
 		left: 50px;
 		height: 300px;
 		width: 300px;
 		border-radius: 300px;
-		background: radial-gradient(white,black);
+		background: radial-gradient(black,white);
 		box-shadow: 80px 0px 0px 10px; color: rgb(150,0,0);
 		list-style: none;
 	}
+
 }
