--- a/css/design/style.css
+++ b/css/design/style.css
@@ -1,9 +1,9 @@
 @media screen and (max-width: 400px) { 
 	
 	img {
-	height: 60vw; width: 90vh;
+	height: 40vw; width: 70vh;
 	align-items: center;
-	margin: 20px
+	margin: 10px
 
 	}
 
@@ -25,6 +25,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	width: 400px;
 	}
 
 	h1{
@@ -51,6 +52,7 @@
 		background-color: white;
 		border: 4px solid black;
 		background: linear-gradient(180deg,white,black)
+		width: 400px;
 	}
 
 	a{
@@ -74,7 +76,7 @@
 
 	section {
 
-		padding: 10px;
+		padding: 5px;
     	justify-content:space-evenly;
 		border: 2px solid black;
 		background-color: black;
