--- a/css/design/style.css
+++ b/css/design/style.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 400px) { 
 	
 	img {
-	height: 40vw; width: 70vh;
+	height: 120px; width: 300px;
 	align-items: center;
 	margin: 10px
 
@@ -35,7 +35,7 @@
 	h2{
 	color: black;
 	background-color: white;
-	width: 400px;
+	width: 350px;
 	box-shadow: 10px 10px 1px 3px rgb(150, 0, 0);
 	text-align: center;
 	letter-spacing: 5px;
@@ -49,10 +49,10 @@
 	}
 
 	nav{
+		width: 400px;
 		background-color: white;
 		border: 4px solid black;
 		background: linear-gradient(180deg,white,black)
-		width: 400px;
 	}
 
 	a{
