--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,7 @@
 	}
 
 	h1 {
-		position: absolute;
-		top: 15px;
-		left: 30px;
+		text-align: center;
 		color: rgb(150,0,0);
 		font-size: 4vw;
 		letter-spacing: 10px;
