--- a/css/me/style.css
+++ b/css/me/style.css
@@ -1,18 +1,18 @@
-@media screen and (max-width: 900px) { 
+@media screen and (max-width: 400px) { 
 	
 	img {
-	height: 70vw; width: 90vh;
+	height: 120px; width: 300px;
 	align-items: center;
-	margin: 20px
+	margin: 10px
 
 	}
 
 	p { 
 	text-align: center;
-	font-size: 2vw;
+	font-size: 4vw;
 	color: white;
-	height: 40vw;
-	width: 80vh;
+	height: 20vw;
+	width: 40vh;
 	word-break: keep-all;
 	line-height: 2.4;
 	margin: 10vw;
@@ -25,9 +25,11 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	width: 400px;
 	}
 
 	h1{
+		text-align: center;
 		letter-spacing: 10px;
 	}
 
@@ -48,6 +50,7 @@
 	}
 
 	nav{
+		width: 400px;
 		background-color: white;
 		border: 4px solid black;
 		background: linear-gradient(180deg,white,black)
@@ -74,11 +77,11 @@
 
 	section {
 
-		padding: 10px;
+		padding: 5px;
     	justify-content:space-evenly;
 		border: 2px solid black;
 		background-color: black;
-		width: 900px;
+		width: 400px;
 	}
 	
 }
